<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="14dp"
    tools:context=".Controlador.LoginActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingBottom="@dimen/padding_between"
                android:paddingTop="@dimen/padding_between"
                android:text="@string/info_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Button
                android:id="@+id/btn_crear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/info_text"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimary"
                android:paddingBottom="@dimen/button_padding"
                android:paddingTop="@dimen/button_padding"
                android:text="@string/crear_boton"
                android:textColor="@android:color/white" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/btn_crear"
                android:layout_marginBottom="@dimen/padding_between"
                android:layout_marginTop="@dimen/padding_between"
                android:background="#C8C9CB" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/prompt_user"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHighlight="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/recordar_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:checked="false"
                    android:text="@string/recordar_check" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/recordar_check"
                    android:layout_marginBottom="@dimen/padding_between"
                    android:layout_marginTop="@dimen/padding_between" />

                <TextView
                    android:id="@+id/olvidar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/divider2"
                    android:layout_alignRight="@+id/divider2"
                    android:layout_below="@+id/recordar_check"
                    android:paddingTop="10dp"
                    android:text="@string/olvidar_text"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Button
                    android:id="@+id/btn_entrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/olvidar_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorPrimary"
                    android:paddingBottom="@dimen/button_padding"
                    android:paddingTop="@dimen/button_padding"
                    android:text="@string/entrar_boton"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>