<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorNuevaDenuncia"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uss.crist.quieremecix.Controlador.Adopcion.NuevaAdopcionActivity">



    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/texto_tituloN_Adop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/textoTitulo"
                android:inputType="textAutoComplete"
                android:padding="@dimen/edit_text_padding"
                android:text="Doy en Adopción"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/texto_LugarN_Adop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/textoLugar"
                android:inputType="textAutoComplete"
                android:padding="@dimen/edit_text_padding"
                android:text="Los sauces"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/texto_RazaN_Adop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/textoRaza"
                android:inputType="textAutoComplete"
                android:padding="@dimen/edit_text_padding"
                android:text="Pitbull"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/texto_ColorN_Adop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/textoColor"
                android:inputType="textAutoComplete"
                android:padding="@dimen/edit_text_padding"
                android:text="Colorado con masnchas blancas"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_border"
                android:orientation="horizontal"
                android:padding="3dp">

                <Button
                    android:id="@+id/btn_tipoMascotaN_Adop"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="7dp"
                    android:paddingLeft="8dp"
                    android:text="@string/TextoTipoMacota"
                    android:textAllCaps="false"
                    android:textColor="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/texto_TipoMascotaN_Adop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="8dp"
                    android:background="@android:color/background_light"
                    android:ems="10"
                    android:enabled="false"
                    android:paddingLeft="16dp"
                    android:textAlignment="center"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />


            </LinearLayout>

            <EditText
                android:id="@+id/texto_DescripcionN_Adop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:layout_centerHorizontal="true"
                android:background="@drawable/edit_text_border"
                android:ems="10"
                android:hint="@string/textoDescripcion"
                android:inputType="textMultiLine"
                android:padding="@dimen/edit_text_padding"
                android:scrollbars="vertical"
                android:text="Busco alguien quien me cuide llamar a #963369633"
                android:textAppearance="?android:attr/textAppearanceSmall"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/et_clave"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/btn_aceptar_nuevaD_Adop"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:fontFamily="sans-serif"
                    android:text="Aceptar"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_cancelar_nuevaD_Adop"
                    style="@style/Widget.AppCompat.Button.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_dark"
                    android:fontFamily="sans-serif"
                    android:text="Cancelar"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <!-- App Bar -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- Imagen del detalle -->
        <ImageView
            android:id="@+id/imagen_nueva_Adop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_prueba_detalle"
            android:transitionName="shared_image" />


    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
