<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.uss.crist.quieremecix.Controlador.ActulizarPasswordActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/info_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/info_tituloRecuperarPass"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <View
            android:id="@+id/div_rp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/info_t"
            android:layout_marginTop="5dp"
            android:background="#C8C9CB" />

        <LinearLayout
            android:id="@+id/area_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/div_rp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                android:layout_marginLeft="32dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/campo_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/app_ingresar_pass"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/area_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_password"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                android:layout_marginLeft="32dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/campo_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/app_confirmar_pass"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_botones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_password2"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_actualizarPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="sans-serif"
                android:text="Actualizar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_cancelar_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="sans-serif"
                android:text="Cancelar"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>


        <View
            android:id="@+id/div_rr2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/ll_botones"
            android:layout_marginTop="20dp"
            android:background="#C8C9CB" />
    </RelativeLayout>
</RelativeLayout>
